--- a/src/components/css/Task.css
+++ b/src/components/css/Task.css
@@ -191,3 +191,15 @@
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Стили для кнопки удаления */
+.delete-button {
+  background-color: transparent; /* Без фона */
+  border: none; /* Без рамки */
+  color: #f44336; /* Красный цвет для текста */
+  font-size: 20px; /* Размер шрифта */
+  cursor: pointer; /* Курсор при наведении - указатель */
+  transition: color 0.3s, transform 0.2s; /* Плавное изменение цвета и эффект масштабирования */
+  margin-left: 10px; /* Отступ слева */
+  padding: 5px;
+}
