--- a/src/components/css/Task.css
+++ b/src/components/css/Task.css
@@ -21,7 +21,7 @@
 }
 
 .input-container {
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,7 +39,7 @@
   color: white;
   font-size: 18px;
   position: relative;
-  top: 500px;
+  top: 510px;
   left: 340px;
 }
 
@@ -58,7 +58,7 @@
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
   position: relative;
-  top: 520px;
+  top: 530px;
   left: 230px;
 }
 
@@ -72,7 +72,7 @@
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
   position: relative;
-  top: 520px;
+  top: 530px;
   left: 50px;
 }
 
@@ -163,6 +163,7 @@
   font-size: 18px;
   position: relative;
   top: 100px;
+  left: 100px;
 }
 
 .add-all-button {
@@ -192,14 +193,33 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Стили для кнопки удаления */
 .delete-button {
-  background-color: transparent; /* Без фона */
-  border: none; /* Без рамки */
-  color: #f44336; /* Красный цвет для текста */
-  font-size: 20px; /* Размер шрифта */
-  cursor: pointer; /* Курсор при наведении - указатель */
-  transition: color 0.3s, transform 0.2s; /* Плавное изменение цвета и эффект масштабирования */
-  margin-left: 10px; /* Отступ слева */
+  background-color: transparent;
+  border: none;
+  color: #f44336;
+  font-size: 20px;
+  cursor: pointer;
+  transition: color 0.3s, transform 0.2s;
+  margin-left: 10px;
   padding: 5px;
+}
+
+.edit-button {
+  background-color: transparent;
+  border: none;
+  color: #4caf50;
+  cursor: pointer;
+  font-size: 18px;
+  margin-left: 8px;
+  transition: color 0.3s ease;
+  position: relative;
+}
+
+.task-stats {
+  position: absolute;
+  top: 100px;
+  left: 30px;
+  font-size: 20px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: green;
 }
