--- a/src/components/css/Second.css
+++ b/src/components/css/Second.css
@@ -2,8 +2,9 @@
   text-align: center;
   margin-top: 50px;
   position: absolute;
-  left: 30px;
+  left: 500px;
   top: 150px;
+  z-index: 999999999999;
 }
 
 .second-title {
